# demo-bot

./: .gitignore  Cargo.toml  default.nix  flake.nix  module.nix  readme.md  shell.nix
.github/workflows/: test.yml
src/: bot.rs  lib.rs  main.rs
src/functions/: help.rs  mod.rs  start.rs
