[package]
name = "tempbot"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/xinux-org/templates"
repository = "https://github.com/xinux-org/templates"
description = "Just a Rust Telegram bot template via nix flakes"

# Dependencies that will included with final binary
[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
log = "0.4.25"
orzklv = { version = "0.1.8", features = ["full"] }
pretty_env_logger = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.13", features = [
  "macros",
  "webhooks",
  "webhooks-axum",
] }
thiserror = "2.0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
